--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     <div class="container">
       <div class="col-md-8 col-md-offset-2 section-title">
         <h2>Get In Touch</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor apibus lornare diam commodo nibh.</p>
+        <p>SO you wanna contact me .Here's how you do it</p>
       </div>
       <div class="col-md-8 col-md-offset-2">
         <form name="sentMessage" id="contactForm" novalidate>
