--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Studio7 - Digital Agency</title>
+<title>nachiketa_raina</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
