--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <div class="col-xs-12 col-md-6">
         <div class="about-text">
           <!--<h4>Who We Are</h4>-->
-          <p>A goof ball at heart.Trying to devour as much as i can about what i study . Dwelling into the intracasies of machine leaning and trying to make sense of it as much as possible</p>
+          <p>A goof ball at heart.Trying to devour as much information as i can gather. Delving into the intricacies of machine leaning and trying to as make sense of it  as possible</p>
          <!-- <h4>What We Do</h4> -->
           <p>Few of the domains of machine learning i have worked on include deep learning,reinforcement leaning ,data analysis and much more </p>
           <!---<h4>Why Choose Us</h4>-->
